# yap

./: .justfile  Cargo.toml  Cross.toml  LICENSE  README.md  build.rs  color_rules.toml  defmt support.md  esp-profiles.toml
.github/workflows/: build.yml  release.yml
example_configs/: Config.md  README.md  yap.toml  yap_colors.toml  yap_colors.toml.blank  yap_espflash_profiles.toml  yap_espflash_profiles.toml.blank  yap_keybinds.toml  yap_keybinds.toml.blank
example_configs/macros/: README.md  example_macros.toml  openshock.toml  openshock_setup.toml
example_macros/: example_macros.toml  openshock.toml  openshock_setup.toml
examples/: README.md  tcp_log_listener.rs  tcp_log_send_test.rs
src/: app.rs  buffer.rs  cli.rs  errors.rs  event_carousel.rs  history.rs  keybinds.rs  lib.rs  main.rs  notifications.rs  panic_handler.rs  serial.rs  text_input.rs  traits.rs  user_input.rs
src/buffer/: buf_line.rs  hex_spans.rs  logging.rs  mod.rs  range_slice.rs  tests.rs  tui.rs
src/buffer/defmt/: elf_watcher.rs  frame_delimiting.rs  mod.rs
src/logging/: mod.rs
src/macros/: macro_nametag.rs  macro_ref.rs  mod.rs  tui.rs
src/serial/: errors.rs  esp.rs  handle.rs  ignorable.rs  mod.rs  worker.rs
src/settings/: line_ending.rs  mod.rs  ser.rs
src/tui/: color_rules.rs  defmt.rs  esp.rs  logging.rs  mod.rs  modifiers.rs  port_settings.rs  prompts.rs  show_keybinds.rs  single_line_selector.rs
src/tui/buffer/: buf_line.rs  mod.rs  tests.rs  wrap.rs
src/updates/: mod.rs  tui.rs
struct-table/: Cargo.toml
struct-table/src/: lib.rs
struct-table/struct-table-derive/: Cargo.toml
struct-table/struct-table-derive/src/: lib.rs
