[package]
name = "yap"
version = "0.1.0"
edition = "2024"

[features]
default = []
# TODO
espflash = ["dep:espflash"]

[dependencies]
ansi-to-tui = { git = "https://github.com/nullstalgia/ansi-to-tui", branch = "lossy_and_line_endings" }
# ansi-to-tui = { path = "../ansi-to-tui" }
# ansi-to-tui = "7.0.0"
arboard = "3.4.1"
arc-swap = "1.7.1"
better-panic = "0.3.0"
chrono = "0.4.39"
color-eyre = "0.6.3"
crokey = { version = "1.1.2", features = ["serde"] }
# crokey = { path = "../crokey", features = ["serde"] }
derivative = "2.2.0"
enum-rotate = "0.1.1"
# enum_rotate = { path = "../enum-rotate" }
espflash = { version = "3.3.0", optional = true, features = ["serialport"] }
fs-err = "3.1.0"
human-panic = "2.0.2"
int-enum = { git = "https://github.com/nullstalgia/int-enum-rs", branch = "feat/colors-and-discriminators" }
itertools = "0.14.0"
libc = "0.2.169"
memchr = "2.7.4"
num-integer = "0.1.46"
# log = "0.4.25"
# num_enum = "0.7.3"
ratatui = { version = "0.29.0", features = ["unstable-rendered-line-info"] }
ratatui-macros = "0.6.0"
rolling-file = "0.2.0"
serde = { version = "1.0", features = ["derive"] }
serde-inline-default = "0.2.3"
serialport = { version = "4.7.0", features = ["serde"] }
strip-ansi-escapes = "0.2.1"
struct-table = { path = "struct-table" }
strum = { version = "0.27", features = ["derive"] }
takeable = "0.2.2"
textwrap = "0.16.2"
thiserror = "2.0.12"
toml = "0.8.21"
tracing = { version = "0.1.41", features = ["log"] }
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.19", features = ["chrono", "env-filter"] }
tui-big-text = "0.7.1"
tui-input = "0.11.1"
unescaper = "0.1.5"
unicode-width = "0.2.0"
virtual-serialport = "0.1.3"

# Enable when flamegraphing
# [profile.release]
# debug = true

# [profile.release]
# lto = true

# Speeds up rendering operations for debug builds
[profile.dev.package.ratatui]
opt-level = 3
