[package]
name = "yap"
version = "0.1.0"
edition = "2024"

[features]
default = ["macros","espflash","defmt"]
# Allow flashing ESP32 targets with binary and ELF files
espflash = ["dep:espflash"]
logging = []
defmt = ["dep:defmt-decoder", "dep:defmt-parser"]
macros = []
portable = []

[dependencies]
ansi-to-tui = { git = "https://github.com/nullstalgia/ansi-to-tui", branch = "lossy_and_line_endings" }
# ansi-to-tui = { path = "../ansi-to-tui" }
# ansi-to-tui = "7.0.0"
arboard = "3.4.1"
arc-swap = "1.7.1"
better-panic = "0.3.0"
bstr = "1.12.0"
camino = { version = "1.1.9", features = ["serde1"] }
chrono = "0.4.39"
color-eyre = "0.6.3"
compact_str = { version = "0.9.0", features = ["serde"] }
crokey = { version = "1.1.2", features = ["serde"] }
crossbeam = "0.8.4"
# defmt-decoder = { version = "1.0.0", optional = true }
defmt-decoder = { git = "https://github.com/knurling-rs/defmt", package = "defmt-decoder", optional = true, rev = "d52b9908c175497d46fc527f4f8dfd6278744f09" }
defmt-parser = { git = "https://github.com/knurling-rs/defmt", package = "defmt-parser", optional = true, rev = "d52b9908c175497d46fc527f4f8dfd6278744f09" }
# crokey = { path = "../crokey", features = ["serde"] }
derivative = "2.2.0"
directories = "6.0.0"
enum-rotate = "0.1.1"
# enum_rotate = { path = "../enum-rotate" }
# espflash = { version = "3.3.0", optional = true, features = ["serialport"] }
# espflash = { path = "../espflash/espflash", optional = true, features = ["serialport"] }
espflash = { git = "https://github.com/nullstalgia/espflash", branch = "public_verify_and_skip", optional = true, default-features = false, features = ["serialport"] }
fs-err = "3.1.0"
hex = "0.4.3"
human-panic = "2.0.2"
indexmap = { version = "2.9.0", features = ["serde"] }
# int-enum = { git = "https://github.com/nullstalgia/int-enum-rs", branch = "feat/colors-and-discriminators" }
int-enum = "1.2.0"
itertools = "0.14.0"
libc = "0.2.169"
memchr = "2.7.4"
nom = "7.1"
num-integer = "0.1.46"
# log = "0.4.25"
# num_enum = "0.7.3"
ratatui = { version = "0.29.0", features = ["unstable-rendered-line-info"] }
ratatui-macros = "0.6.0"
regex = "1.11.1"
# regex-lite = "0.1.6"
rolling-file = "0.2.0"
serde = { version = "1.0", features = ["derive"] }
serde-inline-default = "0.2.3"
serialport = { version = "4.7.0", features = ["serde"] }
strip-ansi-escapes = "0.2.1"
struct-table = { path = "struct-table" }
strum = { version = "0.27", features = ["derive"] }
takeable = "0.2.2"
textwrap = "0.16.2"
thiserror = "2.0.12"
tinyvec = { version = "1.9.0", features = ["std"] }
toml = "0.8.21"
tracing = { version = "0.1.41", features = ["log"] }
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.19", features = ["chrono", "env-filter"] }
tui-big-text = "0.7.1"
tui-input = "0.11.1"
# unescaper = "0.1.5"
unicode-width = "0.2.0"
virtual-serialport = "0.1.3"

[build-dependencies]
copy_to_output = { git = "https://github.com/dougcooper/copy_to_output", rev = "270cffcb13b6e3716a3309515b20f0d70137561c" }

[dev-dependencies]
enable-ansi-support = "0.2.1"

# Enable when flamegraphing
# [profile.release]
# debug = true

# [profile.release]
# lto = true

# Speeds up rendering operations for debug builds
[profile.dev.package.ratatui]
opt-level = 3
