[package]
name = "struct-table-derive"
version = "0.1.0"
edition = "2024"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
proc-macro2-diagnostics = { version = "0.10", default-features = false }
quote = "1.0"
syn = { version = "2.0", features = ["parsing"] }
heck = "0.5.0"
deluxe = "0.5.0"

[dev-dependencies]
struct-table = { path = "../" }
